<resources>
    <string name="app_name">TB1</string>
    <string name="login">Login</string>
    <string name="email_phone">Email/Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="image_of_logo">Image of logo</string>
    <string name="image_of_mercu">Image of mercu</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="join_now">Join Now</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="briefcase">Briefcase</string>
    <string name="groups">Groups</string>
    <string name="profile">Profile</string>
    <string name="image_of_search">Image of search</string>
    <string name="what_s_on_your_head">What\'s on your head?</string>
    <string name="image_of_add_photo">Image of add photo</string>
    <string name="image">Image</string>
    <string name="videos">Videos</string>
    <string name="attach">Attach</string>
    <string name="username">Username</string>
    <string name="date">08:39 am</string>
    <string name="post_content">Jalan hidup ini seperti berjalan di atas jembatan. Tenang dan nyaman.</string>
    <string name="image_of_like">Image of like</string>
    <string name="like_count">1,964</string>
    <string name="comment_count">135</string>
    <string name="account">\@username</string>
    <string name="job">Mobile Developer</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="photos">Photos</string>
    <string name="post">Post</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="details">Details</string>
    <string name="about_me">About Me</string>
    <string name="detail_content">Hanya Seorang Pemuda yang sedang mencari pengalaman dan kenyamanan.</string>
    <string name="follow">Follow</string>
    <string name="discover_people">Discover People</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="google">Google</string>
    <string name="microsoft">Microsoft</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="most_recent">Most Recent</string>
    <string name="no_comment">No comments yet.</string>
    <string name="be_the_first_to_comment">Be the first to comment!</string>
    <string name="inbox">Inbox</string>
    <string name="type_your_comment_here">Type your comment here</string>
    <string name="send">Send</string>
    <string name="type_your_chat_here">Write your message...</string>
    <string name="join">Join</string>
    <string name="discover_groups">Discover Groups</string>
</resources>