<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_discover_people"
        android:icon="@drawable/ic_person_add"
        android:title="@string/discover" />
<!--    <item-->
<!--        android:id="@+id/nav_briefcase"-->
<!--        android:icon="@drawable/ic_briefcase"-->
<!--        android:title="@string/briefcase" />-->
    <item
        android:id="@+id/nav_groups"
        android:icon="@drawable/ic_groups"
        android:title="@string/groups" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/profile" />
</menu>