<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="6dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:contentPaddingBottom="20dp"
        app:contentPaddingLeft="18dp"
        app:contentPaddingRight="18dp"
        app:contentPaddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_image_group"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/img_profile"
                app:shapeAppearanceOverlay="@style/Circular" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/tv_group_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:minHeight="0dp"
                    android:paddingHorizontal="28dp"
                    android:paddingVertical="8dp"
                    android:text="@string/join"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>